# house-price-predictor

./: a.py  download_data.py  dumb.py  pyproject.toml
api/: main.py
app/: streamlit_app.py
models/: ridge_pipeline.joblib
notebooks/: 01_eda.ipynb  02_modeling copy.ipynb  02_modeling.ipynb  a.ipynb  b.ipynb
src/: a.py  data.py  features.py  predict.py  train.py
